--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toggle": "^1.1.3",
     "@tailwindcss/postcss": "^4.0.13",
+    "@tanstack/react-query": "^5.72.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.479.0",
     "next": "14.2.24",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.13",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
