--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "graphql-codegen": "graphql-codegen"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
@@ -22,6 +23,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toggle": "^1.1.3",
     "@shopify/shopify-api": "^11.12.0",
+    "@shopify/storefront-api-client": "^1.0.8",
     "@tailwindcss/postcss": "^4.0.13",
     "@tanstack/react-query": "^5.72.2",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +31,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "graphql-tag": "^2.12.6",
     "lucide-react": "^0.479.0",
     "next": "14.2.24",
     "next-themes": "^0.4.6",
@@ -44,6 +47,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@shopify/api-codegen-preset": "^1.1.8",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
